--- a/index.html
+++ b/index.html
@@ -66,21 +66,21 @@
         <div style="display: flex; margin: 10px 0px">
           <div style="display: flex; margin-right: 20px">
             <h4 style="margin: 5px">IMEI:</h4>
-            <h4 style="margin: 5px">--------------</h4>
+            <h4 id="imei" style="margin: 5px">--------------</h4>
           </div>
           <div style="display: flex">
             <h4 style="margin: 5px">ICCID:</h4>
-            <h4 style="margin: 5px">--------------</h4>
+            <h4 id="iccid" style="margin: 5px">--------------</h4>
           </div>
         </div>
         <div style="display: flex">
           <div style="display: flex; margin-right: 20px">
             <h4 style="margin: 5px">GSM Signal:</h4>
-            <h4 style="margin: 5px">--------------</h4>
+            <h4 id="gsm-signal" style="margin: 5px">--------------</h4>
           </div>
           <div style="display: flex">
             <h4 style="margin: 5px">Version:</h4>
-            <h4 style="margin: 5px">--------------</h4>
+            <h4 id="version" style="margin: 5px">--------------</h4>
           </div>
         </div>
         <div class="grid" id="grid-container"></div>
