--- a/index.html
+++ b/index.html
@@ -63,32 +63,42 @@
         </div>
       </div>
       <div style="width: 100%; margin: 10px; padding: 10px">
-        <div style="display: flex; margin: 10px 0px">
-          <div style="display: flex; margin-right: 20px">
-            <h4 style="margin: 5px">IMEI:</h4>
-            <h4 id="imei" style="margin: 5px">--------------</h4>
+        <div id="logs-container">
+          <div style="display: flex; justify-content: space-between">
+            <span></span>
+            <span id="cancel-icon" style="cursor: pointer">&#x2716;</span>
+          </div>
+          <div>Logs container content</div>
+        </div>
+        <div id="value-container">
+          <div style="display: flex; margin: 10px 0px">
+            <div style="display: flex; margin-right: 20px">
+              <h4 style="margin: 5px">IMEI:</h4>
+              <h4 id="imei" style="margin: 5px">--------------</h4>
+            </div>
+            <div style="display: flex">
+              <h4 style="margin: 5px">ICCID:</h4>
+              <h4 id="iccid" style="margin: 5px">--------------</h4>
+            </div>
           </div>
           <div style="display: flex">
-            <h4 style="margin: 5px">ICCID:</h4>
-            <h4 id="iccid" style="margin: 5px">--------------</h4>
+            <div style="display: flex; margin-right: 20px">
+              <h4 style="margin: 5px">GSM Signal:</h4>
+              <h4 id="gsm-signal" style="margin: 5px">--------------</h4>
+            </div>
+            <div style="display: flex">
+              <h4 style="margin: 5px">Version:</h4>
+              <h4 id="version" style="margin: 5px">--------------</h4>
+            </div>
           </div>
-        </div>
-        <div style="display: flex">
-          <div style="display: flex; margin-right: 20px">
-            <h4 style="margin: 5px">GSM Signal:</h4>
-            <h4 id="gsm-signal" style="margin: 5px">--------------</h4>
-          </div>
-          <div style="display: flex">
-            <h4 style="margin: 5px">Version:</h4>
-            <h4 id="version" style="margin: 5px">--------------</h4>
-          </div>
-        </div>
-        <div class="grid" id="grid-container"></div>
+          <div class="grid" id="grid-container"></div>
 
-      <div style="text-align: center;"> 
-       <button id="print-button"  >Print</button>
-      </div>  
+          <div style="text-align: center">
+            <button disabled id="print-button">Print</button>
+          </div>
+        </div>
       </div>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
