browse functionality added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
         <h4 class="dropdown-text">Upload Excel</h4>
         <button id="browse-button" class="openButton">Browse</button>
 
+        <div style="display: flex">
+          <input
+            style="display: none"
+            type="file"
+            id="file-input"
+            accept="image/*"
+            multiple
+          />
+        </div>
+
         <div>
           <h4 class="dropdown-text">Comport</h4>
           <select id="select1" class="dropdowns"></select>
