--- a/index.html
+++ b/index.html
@@ -81,26 +81,25 @@
           <div>Logs container content</div>
         </div>
         <div id="value-container">
-          <div style="display: flex; margin: 10px 0px">
+          <div class="header-container" style="margin: 10px 0px">
             <div style="display: flex; margin-right: 20px">
-              <h4 style="margin: 5px">IMEI:</h4>
-              <h4 id="imei" style="margin: 5px">--------------</h4>
+              <h3 style="margin: 5px">IMEI:</h3>
+              <h3 id="imei" style="margin: 5px">--------------</h3>
             </div>
             <div style="display: flex">
-              <h4 style="margin: 5px">ICCID:</h4>
-              <h4 id="iccid" style="margin: 5px">--------------</h4>
+              <h3 style="margin: 5px">ICCID:</h3>
+              <h3 id="iccid" style="margin: 5px">--------------</h3>
             </div>
-          </div>
-          <div style="display: flex">
             <div style="display: flex; margin-right: 20px">
-              <h4 style="margin: 5px">GSM Signal:</h4>
-              <h4 id="gsm-signal" style="margin: 5px">--------------</h4>
+              <h3 style="margin: 5px">GSM Signal:</h3>
+              <h3 id="gsm-signal" style="margin: 5px">--------------</h3>
             </div>
             <div style="display: flex">
-              <h4 style="margin: 5px">Version:</h4>
-              <h4 id="version" style="margin: 5px">--------------</h4>
+              <h3 style="margin: 5px">Version:</h3>
+              <h3 id="version" style="margin: 5px">--------------</h3>
             </div>
           </div>
+
           <div class="grid" id="grid-container"></div>
 
           <div style="text-align: center">
