function to add new logs added

--- a/index.html
+++ b/index.html
@@ -76,9 +76,11 @@
         <div id="logs-container">
           <div style="display: flex; justify-content: space-between">
             <span></span>
-            <span id="cancel-icon" style="cursor: pointer">&#x2716;</span>
+            <span id="cancel-icon" style="cursor: pointer; margin: 10px"
+              >&#x2716;</span
+            >
           </div>
-          <div>Logs container content</div>
+          <div><ul style="list-style-type: none" id="logs-list"></ul></div>
         </div>
         <div id="value-container">
           <div class="header-container" style="margin: 10px 0px">
