error message box added

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
           </div>
         </div>
       </div>
+      <div id="error-box" class="hidden"></div>
     </div>
     <script src="index.js"></script>
   </body>
