--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           </div>
         </div>
       </div>
-      <div id="error-box" class="hidden"></div>
+      <div id="toast-container"></div>
     </div>
     <script src="index.js"></script>
   </body>
