--- a/index.html
+++ b/index.html
@@ -105,12 +105,13 @@
           <div class="grid" id="grid-container"></div>
 
           <div style="text-align: center">
-            <button disabled id="print-button">Print</button>
+            <button id="print-button">Print</button>
           </div>
         </div>
       </div>
       <div id="toast-container"></div>
     </div>
     <script src="index.js"></script>
+    <script src="print.js"></script>
   </body>
 </html>
